"report check in 2018-09-29"

--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -87,17 +87,12 @@ Cloning into 'think-java-aliyaaware'...
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex4.java:56: error: cannot find symbol
+Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                           ^
 	  symbol:   variable Exercise4
 	  location: class Ch6Ex4
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
@@ -105,17 +100,12 @@ Cloning into 'think-java-aliyaaware'...
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex5.java:57: error: cannot find symbol
+Ch6Ex5.java:57: error: cannot find symbol
 	            boolean isIt = Exercise5.isDoubloon(testStr);
 	                           ^
 	  symbol:   variable Exercise5
 	  location: class Ch6Ex5
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
@@ -125,17 +115,12 @@ Cloning into 'think-java-aliyaaware'...
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex4.java:56: error: cannot find symbol
+Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                           ^
 	  symbol:   variable Exercise4
 	  location: class Ch6Ex4
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
@@ -143,17 +128,12 @@ Cloning into 'think-java-aliyaaware'...
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex5.java:57: error: cannot find symbol
+Ch6Ex5.java:57: error: cannot find symbol
 	            boolean isIt = Exercise5.isDoubloon(testStr);
 	                           ^
 	  symbol:   variable Exercise5
 	  location: class Ch6Ex5
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
@@ -173,12 +153,7 @@ Cloning into 'think-java-aliyaaware'...
 [COMPILING] SwetterciseTest.java
 	[ERROR] javac failed SwetterciseTest.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	SwetterciseTest.java:77: error: cannot find symbol
+SwetterciseTest.java:77: error: cannot find symbol
 	            gotBack = Swettercise1.isPrime(num);
 	                      ^
 	  symbol:   variable Swettercise1
@@ -193,7 +168,7 @@ Cloning into 'think-java-aliyaaware'...
 	                      ^
 	  symbol:   variable Swettercise1
 	  location: class SwetterciseTest
-	4 errors
+	3 errors
 	
 -----------END COMPILE-------
 [SUMMARY] ['Swettercise: COMPILE ERROR']
