--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,7 +7,6 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
 [PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
@@ -73,17 +72,12 @@ Cloning into 'think-java-asianaaron2'...
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex4.java:56: error: cannot find symbol
+Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                           ^
 	  symbol:   variable Exercise4
 	  location: class Ch6Ex4
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
@@ -91,17 +85,12 @@ Cloning into 'think-java-asianaaron2'...
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex5.java:57: error: cannot find symbol
+Ch6Ex5.java:57: error: cannot find symbol
 	            boolean isIt = Exercise5.isDoubloon(testStr);
 	                           ^
 	  symbol:   variable Exercise5
 	  location: class Ch6Ex5
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
@@ -111,17 +100,12 @@ Cloning into 'think-java-asianaaron2'...
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex4.java:56: error: cannot find symbol
+Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                           ^
 	  symbol:   variable Exercise4
 	  location: class Ch6Ex4
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
@@ -129,17 +113,12 @@ Cloning into 'think-java-asianaaron2'...
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	Ch6Ex5.java:57: error: cannot find symbol
+Ch6Ex5.java:57: error: cannot find symbol
 	            boolean isIt = Exercise5.isDoubloon(testStr);
 	                           ^
 	  symbol:   variable Exercise5
 	  location: class Ch6Ex5
-	2 errors
+	1 error
 	
 -----------END COMPILE-------
 [SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
@@ -159,12 +138,7 @@ Cloning into 'think-java-asianaaron2'...
 [COMPILING] SwetterciseTest.java
 	[ERROR] javac failed SwetterciseTest.java
  ----begin compile output------- 
-./TUtils.java:37: error: cannot find symbol
-	            System.out.print(s);
-	                             ^
-	  symbol:   variable s
-	  location: class TUtils
-	SwetterciseTest.java:77: error: cannot find symbol
+SwetterciseTest.java:77: error: cannot find symbol
 	            gotBack = Swettercise1.isPrime(num);
 	                      ^
 	  symbol:   variable Swettercise1
@@ -179,7 +153,7 @@ Cloning into 'think-java-asianaaron2'...
 	                      ^
 	  symbol:   variable Swettercise1
 	  location: class SwetterciseTest
-	4 errors
+	3 errors
 	
 -----------END COMPILE-------
 [SUMMARY] ['Swettercise: COMPILE ERROR']
