"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -15,43 +15,77 @@ Cloning into 'think-java-AdamRashid'...
 	
 [GITWORK DONE]
 
+<hr>
+
 <b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] D.java
-	[ERROR] Missing Compile Target:D.java
-[COMPILING] T.java
-	[ERROR] Missing Compile Target:T.java
-[SUMMARY] ['D: MISSING', 'T: MISSING']
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] E.java
-	[ERROR] Missing Compile Target:E.java
-[COMPILING] E.java
-	[ERROR] Missing Compile Target:E.java
-[SUMMARY] ['E: MISSING']
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: PASSED, EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] M.java
-	[ERROR] Missing Compile Target:M.java
-[SUMMARY] ['M: MISSING']
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 2< </b>
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
@@ -65,8 +99,8 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] Exercise5.java
-	[SUCCESSFUL COMPILE] Exercise5.java
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
@@ -88,18 +122,20 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
-[COMPILING] Swettercise.java
-	[SUCCESSFUL COMPILE] Swettercise.java
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
 [RUNNING] SwetterciseTest
@@ -133,7 +169,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: PASSED, BUT TEST CASES FOUND SOME ERRORS']
+[SUMMARY] ['Multadd: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">0.86</font></b>
