"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -22,7 +22,7 @@ Cloning into 'think-java-asianaaron2'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
+[COMPILING] this comipleDate.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
@@ -30,7 +30,7 @@ Cloning into 'think-java-asianaaron2'...
 <--
 	[OUTPUT OK]
 
-[COMPILING] Time.java
+[COMPILING] this comipleTime.java
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
@@ -43,16 +43,16 @@ Cloning into 'think-java-asianaaron2'...
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
+[COMPILING] this comipleExercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] Exercise4.java
+[COMPILING] this comipleExercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
@@ -70,7 +70,7 @@ Cloning into 'think-java-asianaaron2'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
@@ -85,7 +85,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
@@ -112,7 +112,7 @@ Ch6Ex5.java:57: error: cannot find symbol
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
