--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -22,7 +22,7 @@ Cloning into 'think-java-AdamRashid'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
+[COMPILING] this comipleDate.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
@@ -30,7 +30,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[COMPILING] Time.java
+[COMPILING] this comipleTime.java
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
@@ -43,7 +43,7 @@ Cloning into 'think-java-AdamRashid'...
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
+[COMPILING] this comipleExercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
@@ -51,7 +51,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[COMPILING] Exercise4.java
+[COMPILING] this comipleExercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
@@ -64,7 +64,7 @@ Cloning into 'think-java-AdamRashid'...
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
@@ -84,7 +84,7 @@ Cloning into 'think-java-AdamRashid'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
@@ -99,7 +99,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
@@ -134,7 +134,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
-[COMPILING] Multadd.java
+[COMPILING] this comipleMultadd.java
 	[ERROR] Missing Compile Target:Multadd.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
