"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -84,8 +84,8 @@ Cloning into 'think-java-AdamRashid'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
-[COMPILING] this comipleMultadd.java
-	[ERROR] Missing Compile Target:Multadd.java
+[COMPILING] this comipleExercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
@@ -99,8 +99,8 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] this comipleMultadd.java
-	[ERROR] Missing Compile Target:Multadd.java
+[COMPILING] this comipleExercise5.java
+	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
@@ -122,10 +122,10 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: RAN, BUT TOO MANY ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.60</b>
 
 <hr>
 
@@ -134,8 +134,8 @@ Ch6Ex4.java:56: error: cannot find symbol
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
-[COMPILING] this comipleMultadd.java
-	[ERROR] Missing Compile Target:Multadd.java
+[COMPILING] this comipleSwettercise.java
+	[SUCCESSFUL COMPILE] Swettercise.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
 [RUNNING] SwetterciseTest
@@ -169,7 +169,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASSED, BUT TEST CASES FOUND SOME ERRORS']
+[SUMMARY] ['Swettercise: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">0.86</font></b>
