--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -70,8 +70,8 @@ Cloning into 'think-java-asianaaron2'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
-[COMPILING] this comipleMultadd.java
-	[ERROR] Missing Compile Target:Multadd.java
+[COMPILING] this comipleExercise4.java
+	[ERROR] Missing Compile Target:Exercise4.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
@@ -85,8 +85,8 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] this comipleMultadd.java
-	[ERROR] Missing Compile Target:Multadd.java
+[COMPILING] this comipleExercise5.java
+	[ERROR] Missing Compile Target:Exercise5.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
@@ -100,10 +100,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Multadd: COMPILE ERROR']
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.20</b>
 
 <hr>
 
@@ -112,8 +112,8 @@ Ch6Ex5.java:57: error: cannot find symbol
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
-[COMPILING] this comipleMultadd.java
-	[ERROR] Missing Compile Target:Multadd.java
+[COMPILING] this comipleSwettercise.java
+	[ERROR] Missing Compile Target:Swettercise.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
 [COMPILING] SwetterciseTest.java
@@ -137,7 +137,7 @@ SwetterciseTest.java:77: error: cannot find symbol
 	3 errors
 	
 -----------END COMPILE-------
-[SUMMARY] ['Multadd: COMPILE ERROR']
+[SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] 0.60</b>
