"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -83,7 +83,7 @@ Cloning into 'think-java-AdamRashid'...
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] this comipleExercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] copied Ch6Ex4
@@ -133,7 +133,7 @@ Ch6Ex4.java:56: error: cannot find symbol
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
+  [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] this comipleSwettercise.java
 	[SUCCESSFUL COMPILE] Swettercise.java
 [TESTING WITH] copied SwetterciseTest
