--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -69,7 +69,7 @@ Cloning into 'think-java-asianaaron2'...
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] [('Exercise4', 'Ch6Ex4'), ('Exercise5', 'Ch6Ex5')]]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] this comipleExercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [TESTING WITH] copied Ch6Ex4
@@ -111,7 +111,7 @@ Ch6Ex5.java:57: error: cannot find symbol
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] [('Swettercise', 'SwetterciseTest')]]
+  [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] this comipleSwettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
 [TESTING WITH] copied SwetterciseTest
