--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -22,7 +22,7 @@ Cloning into 'think-java-AdamRashid'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] this comipleDate.java
+[COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
@@ -30,7 +30,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[COMPILING] this comipleTime.java
+[COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
@@ -38,12 +38,12 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
+[SUMMARY] []
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] this comipleExercise3.java
+[COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
@@ -51,7 +51,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[COMPILING] this comipleExercise4.java
+[COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
@@ -59,12 +59,12 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: PASSED, EXCELLENT!']
+[SUMMARY] []
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] this comipleMultadd.java
+[COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
@@ -72,7 +72,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
+[SUMMARY] []
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">1.00</font></b>
@@ -83,8 +83,8 @@ Cloning into 'think-java-AdamRashid'...
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] this comipleExercise4.java
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
+[COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
@@ -99,7 +99,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] this comipleExercise5.java
+[COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
@@ -122,10 +122,10 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] []
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -133,8 +133,8 @@ Ch6Ex4.java:56: error: cannot find symbol
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
-[COMPILING] this comipleSwettercise.java
+  [EXPECTING TARGETS] ['Swettercise']
+[COMPILING] Swettercise.java
 	[SUCCESSFUL COMPILE] Swettercise.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
@@ -169,9 +169,9 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: PASSED, BUT TEST CASES FOUND SOME ERRORS']
+[SUMMARY] []
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">0.86</font></b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
