--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -22,7 +22,7 @@ Cloning into 'think-java-asianaaron2'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] this comipleDate.java
+[COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
@@ -30,7 +30,7 @@ Cloning into 'think-java-asianaaron2'...
 <--
 	[OUTPUT OK]
 
-[COMPILING] this comipleTime.java
+[COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
@@ -38,30 +38,30 @@ Cloning into 'think-java-asianaaron2'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
+[SUMMARY] []
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] this comipleExercise3.java
+[COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] this comipleExercise4.java
+[COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
+[SUMMARY] []
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] this comipleMultadd.java
+[COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
 	[ERROR] Runtime Error @ java Multadd
 
-[SUMMARY] ['Multadd: RUNTIME ERROR']
+[SUMMARY] []
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.55</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -69,8 +69,8 @@ Cloning into 'think-java-asianaaron2'...
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] this comipleExercise4.java
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
+[COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [TESTING WITH] copied Ch6Ex4
 [COMPILED TEST] copied Ch6Ex4
@@ -85,7 +85,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[COMPILING] this comipleExercise5.java
+[COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
@@ -100,10 +100,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[SUMMARY] []
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -111,8 +111,8 @@ Ch6Ex5.java:57: error: cannot find symbol
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
-[COMPILING] this comipleSwettercise.java
+  [EXPECTING TARGETS] ['Swettercise']
+[COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
@@ -137,9 +137,9 @@ SwetterciseTest.java:77: error: cannot find symbol
 	3 errors
 	
 -----------END COMPILE-------
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+[SUMMARY] []
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
