"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -38,7 +38,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] []
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -59,7 +59,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] []
+[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: PASSED, EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -72,7 +72,7 @@ Cloning into 'think-java-AdamRashid'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] []
+[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">1.00</font></b>
@@ -122,10 +122,10 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] []
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -169,9 +169,9 @@ Ch6Ex4.java:56: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] []
+[SUMMARY] ['Swettercise: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] <font color="green">0.86</font></b>
 
 </pre></body></html>
