--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
-[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
-Cloning into 'think-java-asianaaron2'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK] Re-using code.
 
 <hr>
 
@@ -38,7 +33,7 @@ Cloning into 'think-java-asianaaron2'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] []
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -47,7 +42,7 @@ Cloning into 'think-java-asianaaron2'...
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] []
+[SUMMARY] ['Exercise3: COMPILE ERROR', 'Exercise4: COMPILE ERROR']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -58,10 +53,10 @@ Cloning into 'think-java-asianaaron2'...
 -->
 	[ERROR] Runtime Error @ java Multadd
 
-[SUMMARY] []
+[SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.15</b>
 
 <hr>
 
@@ -100,10 +95,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] []
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.40</b>
 
 <hr>
 
@@ -137,9 +132,9 @@ SwetterciseTest.java:77: error: cannot find symbol
 	3 errors
 	
 -----------END COMPILE-------
-[SUMMARY] []
+[SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.70</b>
 
 </pre></body></html>
