"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
+[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
+Cloning into 'think-java-asianaaron2'...
+	
+[GITWORK DONE]
 
 <hr>
 
