"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -26,7 +26,11 @@ Cloning into 'think-java-AdamRashid'...
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-
+American Format:
+	Tuesday, August 28, 2018
+	European Format:
+	Tuesday 28 August 2018
+	
 <--
 	[OUTPUT OK]
 
@@ -34,7 +38,15 @@ Cloning into 'think-java-AdamRashid'...
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-
+Seconds since midnight: 
+	43709.0
+	Seconds left in the day: 
+	42691.0
+	Percentage of day left: 
+	49.410879629629626
+	Minutes elapsed since you started coding: 
+	18.51666666666665
+	
 <--
 	[OUTPUT OK]
 
@@ -47,7 +59,8 @@ Cloning into 'think-java-AdamRashid'...
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-
+How many seconds? 13.00 sec = 0 hour, 0 min
+	
 <--
 	[OUTPUT OK]
 
@@ -55,7 +68,12 @@ Cloning into 'think-java-AdamRashid'...
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-
+I'm thinking of a number between 1 and 100(Including Both)
+	Can you guess what it is? 
+	Type a number: You guessed: 13
+	The number I was thinking of is: 70
+	You were off by: 57
+	
 <--
 	[OUTPUT OK]
 
@@ -68,7 +86,11 @@ Cloning into 'think-java-AdamRashid'...
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-
+5.0
+	1.0606601717798212
+	5.298317366548037
+	1.1241498650869424
+	
 <--
 	[OUTPUT OK]
 
