--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -26,7 +26,11 @@ Cloning into 'think-java-asianaaron2'...
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-
+American Format:
+	Thursday, July 16, 2015
+	European Format:
+	Thursday 16 July 2015
+	
 <--
 	[OUTPUT OK]
 
@@ -34,7 +38,12 @@ Cloning into 'think-java-asianaaron2'...
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-
+The number of seconds since midnight: 83505seconds
+	Remaining seconds: 6585seconds
+	The percent of the completed course of the day: 95.83333333333334%
+	Start time~~~~~ 11:11.45
+	End time~~~~~11:58.17
+	
 <--
 	[OUTPUT OK]
 
